@@ -31,7 +31,7 @@
 #include "tape_block.h"
 
 /* The .csw file signature (first 23 bytes) */
-const char *libspectrum_csw_signature = "Compressed Square Wave\x1a";
+static const char * const csw_signature = "Compressed Square Wave\x1a";
 
 libspectrum_error
 libspectrum_csw_read( libspectrum_tape *tape,
@@ -42,11 +42,11 @@ libspectrum_csw_read( libspectrum_tape *tape,
 
   int compressed;
 
-  size_t signature_length = strlen( libspectrum_csw_signature );
+  size_t signature_length = strlen( csw_signature );
 
   if( length < signature_length + 2 ) goto csw_short;
 
-  if( memcmp( libspectrum_csw_signature, buffer, signature_length ) ) {
+  if( memcmp( csw_signature, buffer, signature_length ) ) {
     libspectrum_print_error( LIBSPECTRUM_ERROR_SIGNATURE,
 			     "libspectrum_csw_read: wrong signature" );
     return LIBSPECTRUM_ERROR_SIGNATURE;
@@ -320,12 +320,12 @@ libspectrum_csw_write( libspectrum_byte **buffer, size_t *length,
 
   libspectrum_byte *ptr = *buffer;
 
-  size_t signature_length = strlen( libspectrum_csw_signature );
+  size_t signature_length = strlen( csw_signature );
 
   /* First, write the .csw signature and the rest of the header */
   libspectrum_make_room( buffer, signature_length + 29, &ptr, length );
 
-  memcpy( ptr, libspectrum_csw_signature, signature_length );
+  memcpy( ptr, csw_signature, signature_length );
   ptr += signature_length;
 
   *ptr++ = 2;		/* Major version number */
